kubernetes/apps/media/watchstate/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: watchstate
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: watchstate
      app.kubernetes.io/instance: watchstate
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
